index: hero, quote, footer

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
   <header>
     <div class="container">
-      <h1>Blockchain SC Consulting Group</h1>
+      <h1>Blockchain SC Consulting</h1>
       <div class="nav-bar">
         <ul class="nav nav-main justify-content-center">
           <li class="nav-item">
-            <a class="nav-link" href="/project">Members</a>
+            <a class="nav-link" href="">Members</a>
             <div class="circles">
               <svg height="4" width="4"><circle cx="2" cy="2" r="2" fill="white" /></svg>
               <svg height="4" width="4"><circle cx="2" cy="2" r="2" fill="white" /></svg>
@@ -34,7 +34,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/project">Service</a>
+            <a class="nav-link" href="">Service</a>
             <div class="circles">
               <svg height="4" width="4"><circle cx="2" cy="2" r="2" fill="white" /></svg>
               <svg height="4" width="4"><circle cx="2" cy="2" r="2" fill="white" /></svg>
@@ -42,7 +42,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/project">About</a>
+            <a class="nav-link" href="">About</a>
             <div class="circles">
               <svg height="4" width="4"><circle cx="2" cy="2" r="2" fill="white" /></svg>
               <svg height="4" width="4"><circle cx="2" cy="2" r="2" fill="white" /></svg>
@@ -52,13 +52,40 @@
         </ul>
       </div>
     </div>
+    <div class="nav-bar phone-nav-bar">
+      <ul class="nav nav-main justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="">Members</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Service</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">About</a>
+        </li>
+      </ul>
+    </div>
   </header>
-  <div class="container">
-    <h1>Welcome to Blockchain SC</h1>
-    <p>Blockchain SC is a university-based eco-system for blockchain. The organization specializes in facilitating innovating projects and discussion, and helping companies benefit from blockchain technology by identifying use cases, building out prototypes, and integrating solutions.</p>
-    <p class="quote">Whereas most technologies tend to automate workers on the periphery doing menial tasks, blockchains automate away the center. Instead of putting the taxi driver out of a job, blockchain puts Uber out of a job and lets the taxi drivers work with the customer directly.</p>
-    <p>Vitalik Buterin</p>
+
+  <div class="view">
+    <div class="container" data-scroll-speed="4">
+      <h1>Welcome to Blockchain SC</h1>
+      <p>Blockchain SC is a university-based eco-system for blockchain. The organization specializes in facilitating innovating projects and discussion, and helping companies benefit from blockchain technology by identifying use cases, building out prototypes, and integrating solutions.</p>
+    </div>
+    <canvas id="canvas"></canvas>
   </div>
+
+  <div class="container quote">
+    <div class="inner">
+      <p class="quote-text">Whereas most technologies tend to automate workers on the periphery doing menial tasks, blockchains automate away the center. Instead of putting the taxi driver out of a job, <span class="bold">blockchain</span> puts Uber out of a job and lets the taxi drivers work with the customer directly.</p>
+      <p class="quote-author">Vitalik Buterin</p>
+    </div>
+  </div>
+
+  <footer>
+    <h1>Blockchain SC Consulting</h1>
+    <p>Designed by <a href="http://marstanjx.com" target="_blank">Mars Tan</a></p>
+  </footer>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -70,6 +97,11 @@
       $('body').bootstrapMaterialDesign();
     });
   </script>
+  <script src='js/2189e4700f38719a33346cc74.js'></script>
+  <script src='js/feac0eae1a56efd57f04e1bf7.js'></script>
+  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/scroll.js"></script>
+
 </body>
 
 </html>
