services and members

--- a/index.html
+++ b/index.html
@@ -82,6 +82,64 @@
     </div>
   </div>
 
+  <div class="container">
+    <h2>Established in <span class="gold">USC</span></h2>
+    <p>...</p>
+    <h2>Our <span class="gold">Goal</span></h2>
+    <p>...</p>
+  </div>
+
+  <div class="service">
+    <div class="container clearfix">
+      <div class="service-card">
+        <h2>Blockchain solution consulting</h2>
+        <p>Intro</p>
+      </div>
+      <div class="service-card">
+        <h2>Decentralize application development</h2>
+        <p>Intro</p>
+      </div>
+      <div class="service-card">
+        <h2>ICO reviews and rating</h2>
+        <p>Intro</p>
+      </div>
+      <div class="service-card">
+        <h2>Consensus Algorithms</h2>
+        <p>Intro</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container member-section">
+    <h1>Our Team</h1>
+    <div class="members">
+      <div class="member-card">
+        <img class="member-avatar" src="http://www.blockchainsc.org/uploads/1/0/7/1/107194457/screen-shot-2018-02-05-at-1-02-57-pm.png" alt="avatar">
+        <h3 class="member-name">Trey Zhong</h3>
+        <p class="member-pos">Lead Blockchain Developer</p>
+        <p class="member-info">Member info. </p>
+      </div>
+      <div class="member-card">
+        <img class="member-avatar" src="http://www.blockchainsc.org/uploads/1/0/7/1/107194457/screen-shot-2018-02-05-at-1-02-57-pm.png" alt="avatar">
+        <h3 class="member-name">Trey Zhong</h3>
+        <p class="member-pos">Lead Blockchain Developer</p>
+        <p class="member-info">Member info</p>
+      </div>
+      <div class="member-card">
+        <img class="member-avatar" src="http://www.blockchainsc.org/uploads/1/0/7/1/107194457/screen-shot-2018-02-05-at-1-02-57-pm.png" alt="avatar">
+        <h3 class="member-name">Trey Zhong</h3>
+        <p class="member-pos">Lead Blockchain Developer</p>
+        <p class="member-info">Member info</p>
+      </div>
+      <div class="member-card">
+        <img class="member-avatar" src="http://www.blockchainsc.org/uploads/1/0/7/1/107194457/screen-shot-2018-02-05-at-1-02-57-pm.png" alt="avatar">
+        <h3 class="member-name">Trey Zhong</h3>
+        <p class="member-pos">Lead Blockchain Developer</p>
+        <p class="member-info">Member info</p>
+      </div>
+    </div>
+  </div>
+
   <footer>
     <h1>Blockchain SC Consulting</h1>
     <p>Designed by <a href="http://marstanjx.com" target="_blank">Mars Tan</a></p>
